@@ -1,5 +1,16 @@
 2023-04-29  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* libpoke/pkl.c (pkl_module_loaded_p): Remove function.
+	(pkl_add_module): Likewise.
+	* libpoke/pkl.h: ... and prototypes.
+	* libpoke/pkl.c (struct pkl_compiler): Remove `modules' and
+	`num_modules' fields.
+	(pkl_new): Do not initialize these.
+	(pkl_free): Do not dispose memory for these.
+	* libpoke/pkl-tab.y (load_module): Do not call pkl_add_module.
+
+2023-04-29  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* libpoke/pkl.c (pkl_load): Allow loading modules more than once.
 	* libpoke/libpoke.h: Document this behavior.
 
